--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "cloudinary": "^1.32.0",
     "connect-mongo": "^4.6.0",
@@ -25,6 +26,6 @@
     "nodemon": "^2.0.20"
   },
   "engines": {
-    "node":"18.15.0"
+    "node": "18.15.0"
   }
 }
